<resources>
    <string name="app_name">cmpCourier</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_to_cmp">Welcome to cmp</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="telephone">Telephone</string>
    <string name="ok">OK</string>
    <string name="scan_bar_code">Scan Bar Code</string>
    <string name="save">Save</string>
    <string name="report">Report</string>
    <string name="erase">Erase</string>
    <string name="name">Name</string>
    <string name="exit">Exit</string>
    <string name="fail_change_parcel_alert">Failed to Change Parcel Status!</string>
    <string name="success_change_parcel_alert">Successfully Changed Parcel Status!</string>
    <string name="barcode_unselect_alert">You didn\'t scan any bar code!</string>
    <string name="confirm">Confirm</string>
    <string name="login_alert">Invalid Name or Password!</string>
    <string name="no_barcode_alert">There isn\'t such barcode in our server!</string>
    <string name="parcels_import">Parcels Import</string>
    <string name="to_delivery">To Delivery</string>
    <string name="sorting">Sorting</string>
    <string name="sms">SMS</string>
    <string name="logout">Log Out</string>
    <string name="add">Add</string>
    <string name="not">Not</string>
    <string name="new_barcode">New Barcode</string>
    <string name="list_of_parcels">List Of Parcels</string>
    <string name="read">Read</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>
    <string name="_1_reason">1. Reason</string>
    <string name="_2_reason">2. Reason</string>
    <string name="_3_reason">3. Reason</string>
    <string name="_4_reason">4. Reason</string>
    <string name="_5_reason">5. Reason</string>
    <string name="delivered">Delivered</string>
    <string name="not_at_home">Not At Home</string>
    <string name="rejected">Rejected</string>
    <string name="other_time">Other Time</string>
    <string name="wrong_address">Wrong Address</string>
    <string name="_17_19">17–19</string>
    <string name="_15_17">15–17</string>
    <string name="_13_15">13–15</string>
    <string name="_11_13">11–13</string>
    <string name="_9_11">9–11</string>
    <string name="_7_9">7–9</string>
    <string name="title_activity_maps">Map</string>
    <string name="id">ID</string>
    <string name="parcel_no">Parcel No \n Notes</string>
    <string name="status">Status</string>
    <string name="call">Call</string>
    <string name="navigate">Navigate</string>
    <string name="close">Close</string>
    <string name="play_service_alert">Can\'t connect to Play Services</string>
    <string name="google_map_success_alert">Google Map Connection Success!</string>
    <string name="cmp_map">cmp Map</string>
    <string name="map_ready">Map is ready</string>
    <string name="success_remove_alert">Successfully removed order!</string>
    <string name="fail_remove_alert">Failed to remove order!</string>
    <string name="reset">Reset</string>
    <string name="success_reset_alert">Successfully reset orders!</string>
    <string name="fail_reset_alert">Failed to reset orders!</string>
    <string name="marker_description">Marker of Parcel No:</string>
    <string name="success_scan_alert">Successfully Scanned BarCode!</string>
    <string name="unable_change_alert">You can\'t change parcel status, there are some parcels unscanned.</string>
    <string name="count_boxes">Count Of Boxes:</string>
    <string name="from">From</string>
    <string name="result">Result</string>
    <string name="fail_get_language_alert">Failed to get language file!</string>
    <string name="no_camera_permission">Cannot start the barcode reader because the camera permission was not granted.</string>
    <string name="permission_camera_rationale">Access to the camera is needed for barcode detection.</string>
    <string name="change_color">Change Color</string>
    <string name="success_sms_alert">Successfully Sent SMS!</string>
    <string name="fail_sms_alert">Failed to Send SMS!</string>
    <string name="location_alert">Can\'t Find your Location!</string>


    <string name="camera_granted_alert">camera permission granted</string>
    <string name="camera_denied_alert">camera permission denied</string>
    <string name="make_photo">Make Photo</string>
    <string name="undelivered">Undelivered</string>
    <string name="reason">Reason</string>
    <string name="cancel">Cancel</string>
    <string name="max_0_255">Max ( 0/255 )</string>
    <string name="delivery">Delivery</string>
    <string name="planing">Planing</string>
    <string name="upload_success">The file  has been uploaded</string>
    <string name="upload_failed">Failed to Upload</string>
    <string name="select_payment">Select Payment</string>
    <string name="payment_by">Payment By</string>
    <string name="card">Card</string>
    <string name="cash">Cash</string>
    <string name="pin">PIN</string>
    <string name="write_pin_number">Write PIN number</string>
    <string name="esign">Esign</string>
    <string name="send_pin">Send Pin</string>
    <string name="send_pass">Send Password</string>
    <string name="cod">COD</string>
    <string name="type">Type</string>
    <string name="submit">Submit</string>
    <string name="http"></string>
    <string name="change_server_url">Change Server Url</string>
    <string name="id_card">ID Card</string>
    <string name="fill_name">Fill Name</string>
    <string name="note">Note</string>
    <string name="scan_lockbox_number">Scan LockBox Number</string>
    <string name="or_enter_lockbox_number">Or Enter Lockbox Number</string>
    <string name="done">Done</string>
    <string name="current_lockbox_number">Current Lockbox Number:</string>
</resources>
