<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".activity.LockboxActivity">

    <Button
        android:id="@+id/btnScan"
        android:layout_width="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_height="80dp"
        android:layout_marginTop="100dp"
        android:text="@string/scan_lockbox_number"
        android:background="@drawable/orangebuttonselector"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/etLockbox"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/or_enter_lockbox_number"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="@color/text_color"
        android:textColor="@color/text_color"
        android:textAlignment="center"
        android:background="@drawable/background"/>

    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Count: XXX"
        android:textSize="18sp"
        android:textColor="@color/text_color"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/ok"
        android:background="@drawable/orangebuttonselector"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:text="@string/done"
        android:background="@drawable/orangebuttonselector"
        android:textColor="@color/white"/>
</LinearLayout>