<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SMSActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        android:gravity="center_vertical"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <ImageView
            android:id="@+id/imageleft"
            android:layout_width="40dp"
            android:layout_height="45dp"
            android:tint="@color/text_color_white"
            android:src="@drawable/arrow1"
            android:layout_marginLeft="-20dp"
            android:foregroundGravity="left"
            android:layout_marginStart="-20dp" />
        <ImageView
            android:id="@+id/home"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:src="@drawable/home"
            android:tint="@color/white"/>
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color_white"
            android:text="@string/cmp_map"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:textColor="@color/text_color_white"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_7_9"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/_7_9"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_9_11"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/_9_11"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_11_13"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/_11_13"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_13_15"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/_13_15"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_15_17"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/_15_17"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_17_19"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/_17_19"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>