<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:visibility="visible"
        android:gravity="center_vertical"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <!--<ImageView-->
            <!--android:id="@+id/imageleft"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="45dp"-->
            <!--android:tint="@color/text_color_white"-->
            <!--android:src="@drawable/arrow1"-->
            <!--android:layout_marginLeft="-20dp"-->
            <!--android:foregroundGravity="left"-->
            <!--android:layout_marginStart="-20dp" />-->

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/text_color_white"
            android:text="@string/cmp_map"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:textColor="@color/text_color_white"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_parcel_import"
                android:layout_marginTop="40dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/parcels_import"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_sorting"
                android:layout_marginTop="40dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/sorting"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/undeliver_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textSize="25sp"
                    android:text="@string/undelivered"/>
                <TextView
                    android:id="@+id/undeliver_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_to_delivery"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/to_delivery"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/btn_esign"
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/esign"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

            <!--<Button-->
                <!--android:id="@+id/btn_sms"-->
                <!--android:layout_marginTop="40dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_margin="20dp"-->
                <!--android:layout_height="70dp"-->
                <!--android:background="@drawable/orangebuttonselector"-->
                <!--android:text="@string/sms"-->
                <!--android:textColor="@color/white"-->
                <!--android:textAllCaps="false"/>-->
            <Button
                android:id="@+id/btn_logout"
                android:layout_marginTop="40dp"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/orangebuttonselector"
                android:text="@string/logout"
                android:textColor="@color/white"
                android:textAllCaps="false"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>